# VRSoftwareTest

./: .gitignore  README.md  TESTS.md  pyproject.toml
app/: logging_config.py  main.py
app/api/: routes.py
app/models/: schemas.py
app/services/: rabbit.py  status_store.py
tests/: test_api_endpoints.py  test_integration_pipeline.py  test_publisher.py
